Fixed sidebar, made timeline container align to top
Sidebar now extends to the bottom of the page, although the header might be a little weird
Also fixed the alignment of the circles connecting to the timeline, since they suddenly were acting weird

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,11 +21,15 @@ html {
 *, ::before, ::after {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
- body {
-     margin: 0px;
-     text-align: center;
-     background-color: #fffce3;
-     font-family: "Roboto", sans-serif;
- }
+body {
+    text-align: center;
+    background-color: #fffce3;
+    font-family: "Roboto", sans-serif;
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    box-sizing: border-box;
+}
